fixed issue where incorrect classes were hidden by _visiblility helpers

--- a/scss/objects/_visibility.scss
+++ b/scss/objects/_visibility.scss
@@ -78,10 +78,7 @@ Try to use these on a limited basis and avoid creating entirely different versio
 
 //Show / Hide this element on a small screen
 @media only screen and (max-width: $breakpoint-small-max) {
-    .visible--q-small,
-    .hidden--q-medium,
-    .hidden--q-large,
-    .hidden--q-xlarge {
+    .visible--q-small {
         display:block;
     }
     .visible--q-medium,
@@ -95,10 +92,7 @@ Try to use these on a limited basis and avoid creating entirely different versio
 
 //Show / Hide this element on a medium screen
 @media only screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-medium-max) {
-    .visible--q-medium,
-    .hidden--q-small,
-    .hidden--q-large,
-    .hidden--q-xlarge
+    .visible--q-medium
      {
         display:block
     }
@@ -112,9 +106,7 @@ Try to use these on a limited basis and avoid creating entirely different versio
 
 //Show / Hide this element on a large screen
 @media only screen and (min-width:$breakpoint-large) and (max-width: $breakpoint-large-max){
-    .hidden--q-small,
-    .hidden--q-medium,
-    .hidden--q-xlarge,
+
     .visible--q-large {
         display:block
     }
@@ -129,9 +121,6 @@ Try to use these on a limited basis and avoid creating entirely different versio
 //Show / Hide this element on a xlarge screen
 @media only screen and (min-width: $breakpoint-xlarge) {
 
-    .hidden--q-small,
-    .hidden--q-medium,
-    .hidden--q-large,
     .visible--q-xlarge {
         display:block
     }
@@ -148,19 +137,19 @@ Try to use these on a limited basis and avoid creating entirely different versio
 //Show / Hide this element on a medium and small screen
 @media only screen and (max-width: $breakpoint-medium-max) {
     .visible--q-medium-down {
-        display:block;
+        display: block;
     }
     .hidden--q-medium-down {
-        display:none;
+        display: none;
     }
 }
 
 @media only screen and (min-width: $breakpoint-large ) {
-    .visible--q-medium-down {
-        display:none;
+    .visible--q-large-down {
+        display: block;
     }
-    .hidden--q-medium-down {
-        display:block;
+    .hidden--q-large-down {
+        display: none;
     }
 }
 
@@ -175,23 +164,16 @@ Try to use these on a limited basis and avoid creating entirely different versio
 }
 
 @media only screen and (max-width: $breakpoint-small-max) {
-    .visible--q-medium-up {
-        display:none;
+    .hidden--q-small-down {
+        display: none;
     }
-    .hidden--q-medium-up {
-        display:block;
+    .visible--q-small-down {
+        display: block;
     }
 }
 
 //Show / Hide this element on a large and xlarge screen
-@media only screen and (max-width: $breakpoint-medium-max) {
-    .visible--q-large-up {
-        display:none;
-    }
-    .hidden--q-large-up {
-        display:block;
-    }
-}
+
 
 @media only screen and (min-width: $breakpoint-large ) {
     .visible--q-large-up {
